# gtkwave

./: .pre-commit-config.yaml  .yamllint
.github/workflows/: build.yml
gtkwave3-gtk3/: .gitignore  Makefile.am  build-mac-app.sh  configure-mac-app  configure.ac  default.nix  mac-app-build.sh  mac-app-derivation.nix  mac-app.nix  tcl.m4
gtkwave3-gtk3/contrib/bundle_for_osx/: gtkwave.pl  recursive-lipo
gtkwave3-gtk3/contrib/rtlbrowse/: vlex.c  vlex.h
gtkwave4/: .clang-format
